--- a/analyses/6_feature_analysis.ipynb
+++ b/analyses/6_feature_analysis.ipynb
@@ -791,6 +791,10 @@
     "            # Fit the Cox model\n",
     "            cph = CoxPHFitter()\n",
     "            cph.fit(current_data, duration_col='Survival_time', event_col='Event')\n",
+    "\n",
+    "            # Verify proportional hazard assumption\n",
+    "            if covariates:\n",
+    "                cph.check_assumptions(current_data, p_value_threshold=0.05, show_plots=False)\n",
     "            \n",
     "            # Get protein results\n",
     "            hr_protein = np.exp(cph.params_[protein])\n",
