--- a/analyses/1_demographics.ipynb
+++ b/analyses/1_demographics.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,6 +441,57 @@
     "demographics_table = create_demographics_table(df)\n",
     "demographics_table.to_csv(data_path + '/results/demographics_summary.csv')\n",
     "demographics_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate disease stage across sCJD subtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"disease_stage\"] = df[\"onset-LP\"] / df[\"onset-death\"]\n",
+    "\n",
+    "groups_unique = df[\"SubGroup\"].dropna().unique()\n",
+    "groups_data = [df.loc[df[\"SubGroup\"] == g, \"disease_stage\"].dropna() for g in groups_unique]\n",
+    "\n",
+    "# Kruskal-Wallis test\n",
+    "kruskal_stat, kruskal_p = kruskal(*groups_data)\n",
+    "print(f\"Kruskal-Wallis test: H = {kruskal_stat:.4f}, p = {kruskal_p:.4e}\")\n",
+    "\n",
+    "# Post-hoc Dunn test\n",
+    "dunn_res = sp.posthoc_dunn(df, val_col=\"disease_stage\", group_col=\"SubGroup\", p_adjust=\"bonferroni\")\n",
+    "\n",
+    "# Save as excel\n",
+    "output_dir = os.path.join(\"..\", \"data\", \"results\")\n",
+    "#os.makedirs(output_dir, exist_ok=True)\n",
+    "output_path = os.path.join(output_dir, \"disease_stage_kruskal_dunn.xlsx\")\n",
+    "\n",
+    "with pd.ExcelWriter(output_path, engine=\"openpyxl\") as writer:\n",
+    "    # Median (IQR) by subtype\n",
+    "    summary_stage = df.groupby(\"SubGroup\")[\"disease_stage\"].agg(\n",
+    "        Median=\"median\",\n",
+    "        Q1=lambda x: x.quantile(0.25),\n",
+    "        Q3=lambda x: x.quantile(0.75)\n",
+    "    ).reset_index()\n",
+    "    summary_stage[\"IQR\"] = summary_stage[\"Q1\"].round(3).astype(str) + \" - \" + summary_stage[\"Q3\"].round(3).astype(str)\n",
+    "    summary_stage.drop(columns=[\"Q1\", \"Q3\"], inplace=True)\n",
+    "    summary_stage.to_excel(writer, sheet_name=\"Median_IQR_by_SubGroup\", index=False)\n",
+    "\n",
+    "    # Kruskal-Wallis\n",
+    "    pd.DataFrame({\n",
+    "        \"H_statistic\": [kruskal_stat],\n",
+    "        \"p_value\": [kruskal_p]\n",
+    "    }).to_excel(writer, sheet_name=\"Kruskal_Wallis\", index=False)\n",
+    "\n",
+    "    # Dunn test\n",
+    "    dunn_res.to_excel(writer, sheet_name=\"Dunn_posthoc\")"
    ]
   },
   {
