--- a/analyses/6_feature_analysis.ipynb
+++ b/analyses/6_feature_analysis.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +56,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
+    "from scipy.stats import spearmanr\n",
     "from itertools import combinations\n",
     "from matplotlib.gridspec import GridSpec\n",
     "import requests\n",
@@ -679,6 +680,54 @@
     "plt.tight_layout()\n",
     "plt.savefig(figure_path + '/interesting_bmk_all.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate correlation between top 20 protein classifiers levels and timespan LP-death"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(data_path + '/curated/olink.xlsx')\n",
+    "df = df[df['SubGroup'] != 'CTRL']\n",
+    "\n",
+    "feature_importance_rankings = pd.read_csv(data_path + '/results/feature_importance_rankings.csv')\n",
+    "protein_list = list(feature_importance_rankings['Feature'].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = []\n",
+    "\n",
+    "for protein in protein_list:\n",
+    "    if protein in df.columns:\n",
+    "        subset = df[[protein, \"LP-death\"]].dropna()\n",
+    "\n",
+    "        if len(subset) > 1: \n",
+    "            rho, pval = spearmanr(subset[protein], subset[\"LP-death\"])\n",
+    "        else:\n",
+    "            rho, pval = None, None\n",
+    "\n",
+    "        results.append({\n",
+    "            \"Protein\": protein,\n",
+    "            \"Spearman_rho\": rho,\n",
+    "            \"p_value\": pval\n",
+    "        })\n",
+    "\n",
+    "results_df = pd.DataFrame(results)\n",
+    "\n",
+    "print(results_df)"
    ]
   },
   {
