adds disease stage analyses

--- a/analyses/6_feature_analysis.ipynb
+++ b/analyses/6_feature_analysis.ipynb
@@ -734,6 +734,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Evaluate correlation between top 20 protein classifiers levels and disease stage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(data_path + '/curated/olink.xlsx')\n",
+    "df = df[df['SubGroup'] != 'CTRL']\n",
+    "\n",
+    "feature_importance_rankings = pd.read_csv(data_path + '/results/feature_importance_rankings.csv')\n",
+    "protein_list = list(feature_importance_rankings['Feature'].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute disease stage\n",
+    "df[\"disease_stage\"] = df[\"onset-LP\"] / df[\"onset-death\"]\n",
+    "\n",
+    "# Assess association in the whole sCJD cohort\n",
+    "results = []\n",
+    "\n",
+    "for protein in protein_list:\n",
+    "    if protein in df.columns:\n",
+    "        subset = df[[protein, \"disease_stage\"]].dropna()\n",
+    "\n",
+    "        if len(subset) > 1:  # servono almeno 2 valori validi\n",
+    "            rho, pval = spearmanr(subset[protein], subset[\"disease_stage\"])\n",
+    "        else:\n",
+    "            rho, pval = None, None\n",
+    "\n",
+    "        results.append({\n",
+    "            \"Protein\": protein,\n",
+    "            \"Spearman_rho\": rho,\n",
+    "            \"p_value\": pval\n",
+    "        })\n",
+    "\n",
+    "results_df = pd.DataFrame(results)\n",
+    "output_dir = os.path.join(\"..\", \"data\", \"results\")\n",
+    "output_path = os.path.join(output_dir, \"spearman_results_disease_stage.xlsx\")\n",
+    "results_df.to_excel(output_path, index=False)\n",
+    "\n",
+    "# Stratify for sCJD subtype\n",
+    "results = []\n",
+    "\n",
+    "for subgroup, group_df in df.groupby(\"SubGroup\"):\n",
+    "    for protein in protein_list:\n",
+    "        if protein in group_df.columns:\n",
+    "            subset = group_df[[protein, \"disease_stage\"]].dropna()\n",
+    "\n",
+    "            if len(subset) > 1:  # servono almeno 2 valori validi\n",
+    "                rho, pval = spearmanr(subset[protein], subset[\"disease_stage\"])\n",
+    "            else:\n",
+    "                rho, pval = None, None\n",
+    "\n",
+    "            results.append({\n",
+    "                \"SubGroup\": subgroup,\n",
+    "                \"Protein\": protein,\n",
+    "                \"Spearman_rho\": rho,\n",
+    "                \"p_value\": pval,\n",
+    "                \"N\": len(subset)\n",
+    "            })\n",
+    "\n",
+    "results_df = pd.DataFrame(results)\n",
+    "output_dir = os.path.join(\"..\", \"data\", \"results\")\n",
+    "output_path = os.path.join(output_dir, \"spearman_results_disease_stage_bySubGroup.xlsx\")\n",
+    "results_df.to_excel(output_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Survival analysis"
    ]
   },
